# full-stack-fastapi-postgresql

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .env
{{cookiecutter.project_slug}}/backend/app/: pyproject.toml
{{cookiecutter.project_slug}}/backend/app/app/api/api_v1/endpoints/: login.py  users.py  utils.py
{{cookiecutter.project_slug}}/backend/app/app/core/: celery_app.py  config.py  init_db.py
{{cookiecutter.project_slug}}/backend/app/app/data/: crud.py  manage.py  models.py  schemas.py
{{cookiecutter.project_slug}}/backend/app/app/data/auth/: crud.py  model.py  schemas.py
{{cookiecutter.project_slug}}/backend/app/app/data/base/: crud.py  model.py  schemas.py
{{cookiecutter.project_slug}}/backend/app/app/data/user/: crud.py  manage.py  model.py  schemas.py
{{cookiecutter.project_slug}}/backend/app/services/: posthog.py  redis.py
