[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
fastapi = "^0.64.0"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.23.0"
celery = {extras = ["redis"], version = "^5.1.2"}
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^1.4"
emails = "^0.5.15"
gunicorn = "^20.0.4"
jinja2 = "^2.11.2"
alembic = "^1.4.2"
sqlalchemy = "^1.4"
pytest = "^5.4.1"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
asyncpg = "^0.22.0"
psycopg2 = "^2.8.6"
aioredis = "^2.0.0"
pytest-asyncio = "^0.15.1"
httpx = "^0.19.0"
sentry-sdk = "^1.4.2"
posthog = "^1.4.2"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"
neovim = "^0.3.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

